chore: docker 설정

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ java {
         languageVersion = JavaLanguageVersion.of(17)
     }
 }
-
+bootJar {
+    archiveFileName.set("message-publisher.jar")  // 최종 JAR 파일 이름을 'gyuhee.jar'로 설정
+}
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
