--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,8 +10,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/notice_hub
-    username: yanoos
-    password: anfrhrl99!
+    username: postgres
+    password: qwer1234
   jpa:
     hibernate:
       ddl-auto: none
