--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -29,7 +29,9 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
     consumer:
-      group-id: test
+      group-id: message-publisher
+      auto-offset-reset: earliest
+      enable-auto-commit: false  # 자동 오프셋 커밋을 끔
 
 lock:
   timeout: 10
