--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: message_publisher
@@ -28,7 +31,9 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
     consumer:
-      group-id: test
+      group-id: message-publisher
+      auto-offset-reset: earliest
+      enable-auto-commit: false  # 자동 오프셋 커밋을 끔
 
 lock:
   timeout: 10
