--- a/message-publisher/templates/service.yaml
+++ b/message-publisher/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "message-publisher.fullname" . }}
+  name: jhineye-message-publisher
   labels:
-    {{- include "message-publisher.labels" . | nindent 4 }}
+    app: jhineye-message-publisher
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "message-publisher.selectorLabels" . | nindent 4 }}
+    app: jhineye-message-publisher
+  ports:
+    - port: {{ .Values.backend.service.port }}
+      targetPort: {{ .Values.containerPort }}
