--- a/message-publisher/values.yaml
+++ b/message-publisher/values.yaml
@@ -21,7 +21,7 @@ config:
   POSTGRES_USER: postgres
   KAKAO_REDIRECT_URI: http://jhineye.store/api/kakao/callback
   KAKAO_LOGOUT_REDIRECT_URI: http://jhineye.store/
-  KAFKA_BOOTSTRAP_SERVERS: kafka.jhin-eye.svc.cluster.local
+  KAFKA_BOOTSTRAP_SERVERS: kafka-controller-0.kafka-controller-headless.jhin-eye.svc.cluster.local
   KAFKA_BOOTSTRAP_SERVERS_PORT: "9092"
   REDIS_HOST: redis-master.jhin-eye.svc.cluster.local
   REDIS_PORT: "6379"
