--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,7 +11,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/notice_hub
     username: postgres
-    password: qwer1234
+    password: dfdfdf
   jpa:
     hibernate:
       ddl-auto: none
